# hackathon2phase3

./: README.md  tmpclaude-0a06-cwd
.claude/: settings.local.json
.claude/agents/: full-code-implementer.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: .env.example  debug_db.py  find_working_model.py  fix_db.py  list_models.py  local.db  pyproject.toml  quick_test.py  start_backend.bat  test_1_5_flash.py  test_agent.py  test_api_simple.py  test_final_key.py  test_gemini_key.py  test_mcp_server.py  test_models.py  test_new_key.py  tmpclaude-dfe5-cwd
backend/alembic/: env.py
backend/alembic/versions/: 003_add_chat_tables.py
backend/app/: config.py  database.py  main.py
backend/app/mcp/: server.py
backend/app/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/models/: __init__.py  conversation.py  message.py  task.py
backend/app/routes/: __init__.py  auth.py  chat.py
backend/app/schemas/: auth.py  chat.py  task.py
backend/utils/: agent.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/components/: AnimatedRobot.tsx  Footer.tsx  LampLoginForm.tsx  LampSignupForm.tsx  Sidebar.tsx
frontend/hooks/: useAuth.ts  useChat.ts  useTasks.ts
frontend/lib/: api.ts  auth.ts
frontend/types/: index.ts
history/prompts/001-ai-chatbot/: 0001-create-ai-chatbot-plan.plan.prompt.md  0001-create-ai-chatbot-spec.spec.prompt.md  (+6 more)
specs/001-ai-chatbot/: plan.md  spec.md  tasks.md
(+6 files in other folders)
